# base-converter

./: README.md  main.py  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: python-app.yml
src/: conversion.py
tests/: test_base_conversions.py  test_binary_conversions.py  test_conversion.py
